# backend

./: .dockerignore  .gitignore  .template.env  Dockerfile  LICENSE  README.md  config.py  dev.Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: aws.yml
alembic/: env.py
alembic/versions/: 0001_c176f828d2e8_create_admin_table.py  0002_24d81dcc6840_add_hashed_refresh_token_column.py  0003_810e096646b1_add_uuid_jti_column.py  0004_db8df3d4425c_change_uuid_jti_column_data_type.py  0005_c024c5eacb27_add_email_column_and_delete_login_name_.py  0006_5d39717ac21e_create_politician_committee_.py  0006_62027a38d027_create_politician_related_models.py  0007_18a952da0b8f_insert_region_and_constituency_data.py  0007_baed10e94b88_insert_21th_assembly_region_data.py  0008_6b4c9a7b2441_create_adminlog_model.py  0009_365c9eac636a_add_publicsearchlog_model.py  0010_bf7faba0bd78_change_fund_field_type_to_biginteger.py
src/: config.py  main.py
src/admin/: security.py
src/admin/auth/: auth_manager.py  auth_router.py  auth_service.py  smtp_manager.py
src/admin/dev/: dev_router.py
src/common/: enums.py
src/database/: connection.py  models.py
src/public/: public_router.py  public_service.py
src/repositories/: admin_repository.py  area_repository.py  politician_info_repository.py  public_repository.py
src/schema/: admin_info_response.py  dashboard_response.py  login_response.py  politician_request.py  politician_response.py  public_response.py  signup_request.py  signup_response.py  token_response.py
src/tests/: conftest.py  test_admin_auth.py
(+13 files in other folders)
